--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-load": "^1.1.14",
     "express-session": "^1.5.1",
     "i18n": "^0.5.0",
+    "lodash": "^2.4.1",
     "method-override": "^1.0.2",
     "nodemon": "^1.2.0"
   },
