--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "i18n": "^0.5.0",
     "lodash": "^2.4.1",
     "method-override": "^1.0.2",
+    "mongoose": "^3.8.12",
     "nodemon": "^1.2.0"
   },
   "devDependencies": {},
