--- a/package.json
+++ b/package.json
@@ -6,16 +6,13 @@
   "dependencies": {
     "body-parser": "^1.0.2",
     "cookie-parser": "^1.0.1",
-    "ejs": "^1.0.0",
     "express": "^3.0.0",
     "express-load": "^1.1.14",
-    "express-session": "^1.6.4",
-    "i18n": "^0.5.0",
-    "lodash": "^2.4.1",
     "method-override": "^1.0.2",
     "mongodb-uri": "^0.9.7",
     "mongoose": "^3.8.12",
-    "nodemon": "^1.2.0"
+    "nodemon": "^1.2.0",
+    "swig": "^1.4.1"
   },
   "devDependencies": {
     "mocha": "^1.20.1"
